fixed onclick event being commented out

--- a/Mojodoo/Pages/TodoList.razor
+++ b/Mojodoo/Pages/TodoList.razor
@@ -15,7 +15,7 @@
            @*@bind-value="searchText"*@
             placeholder="Search for notes..." />
     <button type="button" class="btn btn-primary mr-sm-2 mb-2" 
-    @onclick="() => Search()" @*Search method does not work*@>Search</button>
+    @*@onclick="() => Search()" @*Search method does not work*@*@>Search</button>
 </div>
 
 
